# realsense-conveyor-linescan

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/calibration/: chessboard_calibration.npz
data/state/: height_mm.npy
docs/: architecture.md  operator-guide.md
src/linescan/: __init__.py  __main__.py  archive.py  calibration.py  camera.py  capture.py  cli.py  config.py  geometry.py  hall_sensor.py  keys.py  measurement.py  reconstruction.py  report.py  state.py
src/linescan/tools/: __init__.py  measure_height.py  position_camera.py  show_results.py  visualize_camera.py
tests/: test_archive.py  test_calibration.py  test_config.py  test_geometry.py  test_imports.py  test_reconstruction.py  test_report.py  test_state.py
